Prevent menu scrollbar from appearing

--- a/Portals/_default/Skins/AgapeFR/css/menus.css
+++ b/Portals/_default/Skins/AgapeFR/css/menus.css
@@ -1,5 +1,5 @@
 ﻿.sidenav { /*set up nav menu*/
-    height: 100%;
+    min-height: 100%;
     width: 0;
     position:absolute;
     z-index: 8;
