--- a/Portals/_default/Skins/AgapeFR/skin.css
+++ b/Portals/_default/Skins/AgapeFR/skin.css
@@ -48,7 +48,7 @@
 
 
 html, body, form {
-    height: 100%;
+
 	background: white;
 }
 
